--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "vite-plugin-cross-origin-storage",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Vite plugin to load chunks from Cross-Origin Storage",
   "type": "module",
-  "main": "index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "files": [
-    "index.ts",
+    "dist",
     "loader.js"
   ],
+  "scripts": {
+    "build": "tsup index.ts --format esm --dts --clean"
+  },
   "peerDependencies": {
     "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   },
-  "dependencies": {
-    "@rollup/pluginutils": "^5.3.0"
+  "devDependencies": {
+    "@rollup/pluginutils": "^5.3.0",
+    "@types/node": "^25.0.9",
+    "rollup": "^4.55.2",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
