--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
   "name": "vite-plugin-cross-origin-storage",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Vite plugin to load chunks from Cross-Origin Storage",
+  "keywords": [
+    "vite",
+    "plugin",
+    "cross-origin-storage",
+    "cos",
+    "loader",
+    "performance"
+  ],
+  "author": "Thomas Steiner",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/tomayac/vite-plugin-cross-origin-storage#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomayac/vite-plugin-cross-origin-storage.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tomayac/vite-plugin-cross-origin-storage/issues"
+  },
   "type": "module",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js"
     }
   },
   "files": [
