--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-cross-origin-storage",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Vite plugin to load chunks from Cross-Origin Storage",
   "keywords": [
     "vite",
@@ -35,7 +35,7 @@
     "loader.js"
   ],
   "scripts": {
-    "build": "tsup index.ts --format esm --dts --clean"
+    "build": "tsup index.ts --format esm --dts --clean && cp loader.js dist/"
   },
   "peerDependencies": {
     "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
