--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-cross-origin-storage",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Vite plugin to load chunks from Cross-Origin Storage",
   "keywords": [
     "vite",
@@ -35,7 +35,8 @@
     "loader.js"
   ],
   "scripts": {
-    "build": "tsup index.ts --format esm --dts --clean && cp loader.js dist/"
+    "build": "tsup index.ts --format esm --dts --clean && cp loader.js dist/",
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
     "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
