--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "outDir": "dist",
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
-  "include": [
-    "index.ts"
-  ]
+  "include": ["index.ts"]
 }
