--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   ],
   "scripts": {
     "build": "tsup index.ts --format esm --dts --clean && cp loader.js dist/",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test:dev": "npm run build && vite testing",
+    "test:build": "npm run build && vite build testing",
+    "test:preview": "vite preview testing"
   },
   "peerDependencies": {
     "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
